apps/paperless-ngx/components/istio/istio-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: paperless-ngx
spec:
  hosts:
    - paperless-ngx.local
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: paperless-ngx
            port:
              number: 80
